--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pramatma Vishwakarma's ePortfolio</title>
+    <title>Pramatma Vishwakarma's</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Pramatma Vishwakarma</h1>
-        <p>Self-motivated, energetic, and ambitious IT professional</p>
-    </header>
+    <section class="profile-section">
+        <img src="profile.jpg" alt="Profile Picture" class="profile-picture">
+        <h2>PRAMATMA VISHWAKARMA</h2>
+        <p>Self-motivated, energetic, and ambitious IT professional...</p>
+    </section>
     
     <section id="summary">
         <h2>Summary</h2>
