--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <img src="profile.jpg" alt="Profile Picture" class="profile-picture">
         <h2>PRAMATMA VISHWAKARMA</h2>
         <p>Self-motivated, energetic, and ambitious IT professional...</p>
+
+         <div class="theme-switch-wrapper">
+            <label class="theme-switch" for="checkbox">
+                <input type="checkbox" id="checkbox">
+                <div class="slider round"></div>
+            </label>
+            <span id="theme-label">Light Mode</span>
+        </div>
     </section>
     
     <section id="summary">
